Fix scrollbar bug on markdown page

--- a/ui/scss/component/_post.scss
+++ b/ui/scss/component/_post.scss
@@ -116,7 +116,7 @@
   font-size: var(--font-large);
   height: auto;
   max-height: none;
-  overflow: auto;
+  // overflow: auto;
   margin-bottom: var(--spacing-l);
 }
 
